Fix issue with About me section on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -315,7 +315,7 @@ nav {
   font-size: 72px;
   color: #ff6b00;
   font-family: 'Crete Round', serif;
-  margin: 1rem 3rem 1rem 1rem;
+  margin: 1rem 1rem 1rem 1rem;
   line-height: 88px;
   font-weight: 400;
   text-align: start;
@@ -323,12 +323,13 @@ nav {
 
 .text-section p {
   color: #f4f5f7;
-  margin: 1rem 3rem 1rem 1rem;
+  margin: 1rem 1rem 1rem 1rem;
   line-height: 24px;
   font-weight: 400;
   font-family: 'Inter', serif;
   font-size: 16px;
   font-style: normal;
+  text-align: start;
 }
 
 .text-section .btn {
